# poland-scanner

./: .gitignore  README.md  config.example.json  home_scanner.py  olx_rent_watcher.py  poland_scanner.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_home_scanner.py  test_poland_scanner.py
